results/SVCOMP/4-shot/log-iarith2-2024_03_19_00_41_24.txt
class iarith2 {
    //@ ensures \result == -1;
  private static int i() {
    int value = 3;
    value &= 1;
    value |= 4;
    value ^= 4;
    value <<= 2;
    value >>= 1;
    value = -value;
    value >>>= 1;
    return value;
  }

    //@ ensures \result == -1L;
  private static long l() {
    long value = 3L;
    value &= 1L;
    value |= 4L;
    value ^= 4L;
    value <<= 2L;
    value >>= 1L;
    value = -value;
    value >>>= 1L;
    return value;
  }

    //@ ensures lhs < rhs ==> \result == true;
    //@ ensures !(lhs < rhs) ==> \result == false;
  private static void s() {
    short lhs = 127;
    short rhs = 32767;
    if (lhs < rhs) {
      return;
    }
    assert false;
  }
}
/home/max/Documents/JMLGPT/tmp/iarith2.java:28: error: cannot find symbol
    //@ ensures lhs < rhs ==> \result == true;
                ^
  symbol:   variable lhs
  location: class iarith2
/home/max/Documents/JMLGPT/tmp/iarith2.java:28: error: cannot find symbol
    //@ ensures lhs < rhs ==> \result == true;
                      ^
  symbol:   variable rhs
  location: class iarith2
/home/max/Documents/JMLGPT/tmp/iarith2.java:28: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures lhs < rhs ==> \result == true;
                               ^
/home/max/Documents/JMLGPT/tmp/iarith2.java:29: error: cannot find symbol
    //@ ensures !(lhs < rhs) ==> \result == false;
                  ^
  symbol:   variable lhs
  location: class iarith2
/home/max/Documents/JMLGPT/tmp/iarith2.java:29: error: cannot find symbol
    //@ ensures !(lhs < rhs) ==> \result == false;
                        ^
  symbol:   variable rhs
  location: class iarith2
/home/max/Documents/JMLGPT/tmp/iarith2.java:29: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures !(lhs < rhs) ==> \result == false;
                                  ^
6 errors

